# md-align

./: .bumpversion.cfg  CHANGELOG.md  Makefile  README.md  align-docs.py  pyproject.toml
.changelog/: add-readme-to-pypi.misc
.github/workflows/: callable-ci.yml  release.yml
align_md_docs/: cli.py  list_descs.py
docs/: architecture.md  cicd.md  concepts.md  overview.md  repo.md  rules.md
docs/features/: arrow-alignment.md  box-wall-checking.md  box-width-normalization.md  pipe-continuity.md  rail-alignment.md  table-alignment.md
docs/guides/: cli-usage.md  releasing.md  testing-strategy.md
src/docalign/: __init__.py  cli.py  constants.py  parser.py  utils.py
src/docalign/checks/: arrows.py  box_padding.py  box_spacing.py  box_walls.py  box_widths.py  def_lists.py  horiz_arrows.py  list_descs.py  pipes.py  rails.py  tables.py  wide_chars.py
src/mdalign/: __init__.py  cli.py  hints.py  parser.py  utils.py
src/mdalign/checks/: arrows.py  box_padding.py  box_spacing.py  box_walls.py  box_widths.py  def_lists.py  horiz_arrows.py  list_descs.py  pipes.py  rails.py  tables.py  wide_chars.py
tests/: test_align.py  test_hints.py
tests/fixtures/all-checks/: expected.md  input.md
tests/fixtures/checks/arrows/01-v-arrow-shift/: expected.md  input.md
tests/fixtures/checks/arrows/02-fp-arrow-in-text/: expected.md
tests/fixtures/checks/arrows/03-fp-already-aligned/: input.md
tests/fixtures/checks/arrows/04-embedded-arrow-in-border/: expected.md
tests/fixtures/checks/arrows/05-fp-no-embedded-arrow/: input.md
tests/fixtures/checks/arrows/06-embedded-horiz-arrow-in-border/: expected.md
tests/fixtures/checks/arrows/07-fp-no-embedded-horiz-arrow/: input.md
tests/fixtures/checks/box-spacing/01-content-touching-wall/: expected.md  input.md
tests/fixtures/checks/box-spacing/02-fp-padded/: input.md
tests/fixtures/checks/box-walls/01-short-wall/: expected.md  input.md
tests/fixtures/checks/box-walls/02-inner-displaced/: expected.md  input.md
tests/fixtures/checks/box-walls/03-nested-cascade/: expected.md  input.md
tests/fixtures/checks/box-walls/04-fp-aligned-walls/: expected.md
tests/fixtures/checks/list-descs/01-basic/: expected.md  (+1 more)
tests/fixtures/deploy/01-pipeline-with-merge/: expected.md  input.md
tests/fixtures/multi-column/01-sequence-diagram/: expected.md
tests/fixtures/multi-column/02-branching-flow/: input.md
tests/fixtures/nested/01-deep-nested/: input.md
tests/fixtures/nested/02-tree-inside-box/: input.md
(+70 files in other folders)
