[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdalign"
version = "0.1.0"
description = "Auto-fix alignment in markdown docs"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.9"]

[project.scripts]
mdalign = "mdalign.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mdalign"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
