[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docalign"
version = "0.1.1"
description = "Auto-fix alignment in markdown docs"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.9", "towncrier>=23", "bump2version>=1"]

[project.scripts]
docalign = "docalign.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docalign"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.towncrier]
directory = ".changelog"
filename = "CHANGELOG.md"
title_format = "## {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true
